src/components/backgroundselector/style/backgroundselector-sigeom.less
[ga-background-selector] {
  &.ga-bg-mobile {

    &.ga-open {
      .ga-bg-layer-0 {
        bottom: 101px;
        @media (max-width: @screen-tablet) {
          bottom: 76px;
        }
      }

      .ga-bg-layer-1 {
        bottom: 150px;
        @media (max-width: @screen-tablet) {
          bottom: 125px;
        }
      }

      .ga-bg-layer-2 {
        bottom: 199px;
        @media (max-width: @screen-tablet) {
          bottom: 174px;
        }
      }

      .ga-bg-layer-3 {
        bottom: 248px;
        @media (max-width: @screen-tablet) {
          bottom: 223px;
        }
      }

      .ga-bg-layer-4 {
        bottom: 297px;
        @media (max-width: @screen-tablet) {
          bottom: 272px;
        }
      }

      .ga-SITU5_MOSAIC {
        background-image: data-uri('SITU5_MOSAIC.png');
        background-size: 38px 38px;
      }

      .ga-ORTHOPHOTOS_2008 {
        background-image: data-uri('ORTHOPHOTOS_2008.png');
        background-size: 38px 38px;
      }

      .ga-ORTHOPHOTOS_2011 {
        background-image: data-uri('ORTHOPHOTOS_2011.png');
        background-size: 38px 38px;
      }

      .ga-PLAN_25000_COULEUR {
        background-image: data-uri('PLAN_25000_COULEUR.png');
        background-size: 38px 38px;
      }

      .ga-PLAN_25000_GRIS {
        background-image: data-uri('SITU5_MOSAIC.png');
        background-size: 38px 38px;
      }

      .ga-DTM_2011 {
        background-image: data-uri('DTM_2011.png');
        background-size: 38px 38px;
      }
    }
  }

  &.ga-bg-desktop {
    &.ga-open {
      .ga-bg-layer-0 {
        right: 35px;
      }

      .ga-bg-layer-1 {
        right: 136px;
        @media (max-width: @screen-tablet) {
          right: 88px;
        }
      }

      .ga-bg-layer-2 {
        right: 237px;
        @media (max-width: @screen-tablet) {
          right: 141px;
        }
      }

      .ga-bg-layer-3 {
        right: 338px;
        @media (max-width: @screen-tablet) {
          right: 194px;
        }
      }

      .ga-SITU5_MOSAIC {
        background-image: data-uri('SITU5_MOSAIC-rect.png');
      }

      .ga-ORTHOPHOTOS_2008 {
        background-image: data-uri('ORTHOPHOTOS_2008-rect.png');
      }

      .ga-ORTHOPHOTOS_2011 {
        background-image: data-uri('ORTHOPHOTOS_2011-rect.png');
      }

      .ga-PLAN_25000_COULEUR {
        background-image: data-uri('PLAN_25000_COULEUR-rect.png');
      }

      .ga-PLAN_25000_GRIS {
        background-image: data-uri('SITU5_MOSAIC-rect.png');
      }

      .ga-DTM_2011 {
        background-image: data-uri('DTM_2011-rect.png');
      }
    }
  }
}

